--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  line-height: 1.25em;
 }
 
 html, body {
@@ -15,4 +16,33 @@ html, body {
 
 body {
   background-color: #e8ffd1;
+}
+
+h1, h2, h3, h4 {
+  color: darkred;
+  line-height: 1.5em;
+  margin: .5em auto;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 18px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+h4 {
+  font-size: 14px;
+}
+
+p {
+  line-height: 1.5em;
+  margin: .5em auto;
+  font-size: 16px;
+  color: #171e14;
 }
